--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
                 <li><button class="btn">hire me</button></li>
             </ul>
         </nav>
+        <section id="banner">
+            <div class="banner-contant">
+                <h2>Hi,I am</h2>
+                <h1>Ajoy deb</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <div>
+                    <button class="btn">Download cv</button>
+                    <button class="btn">Contact</button>
+                </div>
+            </div>
+            <div class="banner-image">
+                <img src="images/hardy.png" alt="">
+            </div>
+        </section>
     </header>
     
 </body>
